Database Connection class created

--- a/TournamentsSynthesis/ClassLibraryTournaments/ClassLibraryTournaments.csproj
+++ b/TournamentsSynthesis/ClassLibraryTournaments/ClassLibraryTournaments.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Presentation\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.29" />
+  </ItemGroup>
+
 </Project>
